maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:8: error: illegal start of statement
    else
    ^