maze.island.IslandMaze.scala.code
override def run() {
  while(!isOverBaggle()){
    if(getDirection == Direction.NORTH && northOK())
      while(getDirection == Direction.NORTH && northOK())
    		forward();
    right();;
    else
	    while(!(getDirection == Direction.NORTH && northOK() ))
  	    keepHandOnSideWall();
  }
  pickupBaggle();
}


def keepHandOnSideWall() {
  while(!isFacingWall()){
    forward();
    left();
  }
  right();
}

def northOK() : Boolean = {
  var dir = getDirection();
  setDirection(Direction.NORTH);
  var nOK = !isFacingWall();
  setDirection(dir);
  return nOK;
}

